Updating test case